[package]
name = "vk_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.2"
glam = "0.23.0"
ash = { git = "https://github.com/ash-rs/ash.git", features = ["linked", "debug"] }
windows = "0.44.0"
memchr = "2.5.0"
num-traits = "0.2.15"
rand_chacha = "0.3.1"
raw-window-handle = "0.5.0"
smallvec = "1.10.0"
once_cell = "1.17.0"
itertools = "0.10.5"
memoffset = "0.8.0"

#[dev-dependencies]
#criterion = "0.4"
#
#[[bench]]
#name = "bench_a"
#harness = false